--- a/parts/replace/kdevpart_replace.desktop
+++ b/parts/replace/kdevpart_replace.desktop
@@ -2,9 +2,10 @@
 Encoding=UTF-8
 Type=Service
 Exec=
-Comment=Project wide string replacement
-Name=KDevreplace
+Comment=This plugin is an interactive projectwide "Search and Replace" tool. Search using string or regexp matching, and select the replacements to be made from a preview before the action is finalized. When loaded it appears in the Edit menu.
+Name=ReplacePart
+GenericName=Search-Select-Replace tool
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
-X-KDevelop-Scope=Project
+X-KDevelop-Scope=Global
 X-KDE-Library=libkdevreplace
