--- a/parts/pascalsupport/Makefile.am
+++ b/parts/pascalsupport/Makefile.am
@@ -1,10 +1,14 @@
-INCLUDES = -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/util $(all_includes)
+KDE_CXXFLAGS = $(USE_EXCEPTIONS)
+
+INCLUDES = -I$(top_srcdir)/lib/antlr -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/sourceinfo -I$(top_srcdir)/lib/util $(all_includes)
 
 kde_module_LTLIBRARIES = libkdevpascalsupport.la
-libkdevpascalsupport_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
-libkdevpascalsupport_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
+libkdevpascalsupport_la_LDFLAGS = $(LEXLIB) $(all_libraries) $(KDE_PLUGIN)
+libkdevpascalsupport_la_LIBADD = $(top_builddir)/lib/libkdevelop.la $(top_builddir)/lib/sourceinfo/libkdevsourceinfo.la $(top_builddir)/lib/antlr/src/libantlr.la
 
-libkdevpascalsupport_la_SOURCES = pascalsupport_part.cpp
+libkdevpascalsupport_la_SOURCES = pascalsupport_part.cpp\
+	PascalLexer.cpp PascalParser.cpp PascalStoreWalker.cpp\
+	backgroundparser.cpp backgroundparser.h configproblemreporter.ui problemreporter.cpp
 
 METASOURCES = AUTO
 
@@ -14,5 +18,17 @@ service_DATA = kdevpascalsupport.desktop
 rcdir = $(kde_datadir)/kdevpascalsupport
 rc_DATA = kdevpascalsupport.rc
 
+## The following rules assume that you have Java and ANTLR installed,
+#PascalLexer.hpp PascalLexer.cpp PascalParser.hpp PascalParser.cpp: pascal.g
+#	antlr pascal.g
+
+#PascalStoreWalker.hpp PascalStoreWalker.cpp: pascal.tree.g
+#	antlr pascal.tree.g
+
 #templatedir = ${kde_datadir}/kdevabbrev/templates
 #template_DATA = pascaltemplates
+
+AM_CFLAGS = 
+AM_CXXFLAGS = 
+AM_FFLAGS = 
+SUBDIRS = 
