applied further clearcase changes by Ajay Guleria <Ajay.Guleria@synopsys.com>

--- a/parts/clearcase/Makefile.am
+++ b/parts/clearcase/Makefile.am
@@ -6,7 +6,7 @@ kde_module_LTLIBRARIES = libkdevclearcase.la
 libkdevclearcase_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevclearcase_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
-libkdevclearcase_la_SOURCES = clearcasepart.cpp
+libkdevclearcase_la_SOURCES = clearcasepart.cpp commentdlg.cpp
 
 METASOURCES = AUTO
 
