Added kdevelopversioncontrol.desktop. Now a new type KDevelop/VersionControl is available for who wants to develop version control systems plugins.

--- a/lib/interfaces/Makefile.am
+++ b/lib/interfaces/Makefile.am
@@ -34,7 +34,7 @@ servicetype_DATA = kdevelopcompileroptions.desktop \
 		   kdevelopmakefrontend.desktop kdevelopappfrontend.desktop \
 		   kdevelopproject.desktop kdeveloplanguagesupport.desktop \
 		   kdevelopplugin.desktop kdevelopdifffrontend.desktop \
-		   kdevelopcreatefile.desktop
+		   kdevelopcreatefile.desktop kdevelopversioncontrol.desktop
 
 
 METASOURCES = AUTO
