This was submitted via a whishlist: http://bugs.kde.org/show_bug.cgi?id=53702
Thanks to: Mårten Woxberg < marwo264 (at) student.liu.se >
For supplying this template.

--- a/parts/appwizard/Makefile.am
+++ b/parts/appwizard/Makefile.am
@@ -6,7 +6,7 @@ SUBDIRS = . imports common kapp kpartapp kpartplugin kappjava javahello kcmodule
 	  kofficepart chello_gba dcopservice konqnavpanel qmakesimple qmakeapp khello kateplugin\
 	  qtopiaapp fortranhello adahello kdedcop \
 	  perlhello rubyhello bashhello pascalhello fpcsharedlib fpchello\
-	  fpcgtk superwaba
+	  fpcgtk superwaba cppsdlhello
 
 INCLUDES = -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/sourceinfo $(all_includes)
 
