- Merged GlobalCvs in CvsPart - removed parts/cvs/globalcvs - added common cvs options as #define in new cvs_commonoptions.h - updated Makefile.am

--- a/parts/cvs/Makefile.am
+++ b/parts/cvs/Makefile.am
@@ -6,11 +6,14 @@ kde_module_LTLIBRARIES = libkdevcvs.la
 libkdevcvs_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevcvs_la_LIBADD = $(top_builddir)/lib/libkdevelop.la $(top_builddir)/lib/interfaces/libkdevinterfaces.la
 
-libkdevcvs_la_SOURCES = cvspart.cpp commitdlg.cpp commitdlg.h logform.ui cvsoptionswidgetbase.ui cvsoptionswidget.cpp cvsoptionswidget.h cvswidget.cpp cvswidget.h
+#libkdevcvs_la_SOURCES = cvsform.ui cvspart.cpp commitdlg.cpp logform.ui cvsoptionswidgetbase.ui cvsoptionswidget.cpp cvswidget.cpp urlfileutilities.cpp
+libkdevcvs_la_SOURCES = cvsform.ui urlfileutilities.cpp cvspart.cpp commitdlg.cpp logform.ui cvsoptionswidgetbase.ui cvsoptionswidget.cpp cvswidget.cpp cvs_commonoptions.h
 
 METASOURCES = AUTO
 
 servicedir = $(kde_servicesdir)
 service_DATA = kdevcvs.desktop
-libkdevcvs_la_DEPENDENCIES = 
-SUBDIRS = globalcvs
+libkdevcvs_la_DEPENDENCIES =
+
+rcdir = $(kde_datadir)/kdevcvs
+rc_DATA = kdevcvspart.rc buildcvs.sh
