--- a/parts/cvs/kdevcvs.desktop
+++ b/parts/cvs/kdevcvs.desktop
@@ -3,7 +3,7 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=CVS Integration
-Name=KDevCvs
-ServiceTypes=KDevelop/Plugin
+Name=CVS
+ServiceTypes=KDevelop/VersionControl
 X-KDE-Library=libkdevcvs
-X-KDevelop-Scope=Project
+X-KDevelop-Scope=Global
