* Updated CVS sources   * Added the prefix to debian/rules and debian/buld-gideon   * Added stl-manual to the suggests field for gideon-doc   * Fixed up the path to the kdevelop manual   * Added the documentation files to the gideon-doc package   * Added the antlr header files to the gideon-dev package   * Fixed up the configure options for the file "debian/build-gideon"   * Moved the script update_doc_index.sh to /usr/share/gideon
Patch by: Norman Jordan <njordan at shaw.ca>

--- a/debian/control
+++ b/debian/control
@@ -22,7 +22,7 @@ Description: An IDE for Unix/X11 - development version
 Package: gideon-doc
 Section: doc
 Architecture: all
-Suggests: qt-doc, python2.2-doc, glib-reference, gtk-reference, gnome-dev-doc
+Suggests: qt-doc, python2.2-doc, glib-reference, gtk-reference, gnome-dev-doc, stl-manual
 Description: An IDE for Unix/X11 - documentation
  KDevelop is an easy to use Integrated Development Environment
  for developing C/C++ applications under X11. It features 
