CVS_SILENT i18n flaws fixed with the help of KnHIGge

--- a/lib/interfaces/kdevelopdifffrontend.desktop
+++ b/lib/interfaces/kdevelopdifffrontend.desktop
@@ -3,5 +3,5 @@ Encoding=UTF-8
 Type=ServiceType
 X-KDE-ServiceType=KDevelop/DiffFrontend
 X-KDE-Derived=KDevelop/Plugin
-Name=Diff frontend interface
+Name=Diff Frontend Interface
 
