--- a/parts/autoproject/kdevautoproject.desktop
+++ b/parts/autoproject/kdevautoproject.desktop
@@ -2,7 +2,7 @@
 Encoding=UTF-8
 Type=Service
 Exec=blubb
-Comment=Automake project
+Comment=Automake Project
 Name=KDevAutoProject
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevautoproject
