--- a/parts/javasupport/kdevjavasupport.desktop
+++ b/parts/javasupport/kdevjavasupport.desktop
@@ -2,7 +2,7 @@
 Encoding=UTF-8
 Type=Service
 Exec=blubb
-Comment=Java support
+Comment=Java Support
 Name=KDevJavaSupport
 ServiceTypes=KDevelop/LanguageSupport
 X-KDE-Library=libkdevjavasupport
