--- a/parts/customproject/kdevcustomproject.desktop
+++ b/parts/customproject/kdevcustomproject.desktop
@@ -2,7 +2,7 @@
 Encoding=UTF-8
 Type=Service
 Exec=blubb
-Comment=Custom project
+Comment=Custom Project
 Name=KDevCustomProject
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevcustomproject
