--- a/parts/debugger/kdevdebugger.desktop
+++ b/parts/debugger/kdevdebugger.desktop
@@ -4,7 +4,7 @@ Type=Service
 Exec=blubb
 Comment=This plugin provides a frontend for GDB, a source-level debugger for C, C++ and more.
 Name=KDevDebugger
-GenericName=Debugger frontend
+GenericName=Debugger Frontend
 Icon=
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevdebugger
