--- a/parts/scriptproject/kdevscriptproject.desktop
+++ b/parts/scriptproject/kdevscriptproject.desktop
@@ -2,7 +2,7 @@
 Encoding=UTF-8
 Type=Service
 Exec=blubb
-Comment=Scripting language project
+Comment=Scripting Language Project
 Name=KDevScriptProject
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevscriptproject
