--- a/parts/svn/kdevpart_svn.desktop
+++ b/parts/svn/kdevpart_svn.desktop
@@ -2,7 +2,7 @@
 Encoding=UTF-8
 Type=Service
 Exec=blubb
-Comment=Subversion integration
+Comment=Subversion Integration
 Name=KDevsvn
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
