use gideon as icon

--- a/gideon.desktop
+++ b/gideon.desktop
@@ -4,7 +4,7 @@ BinaryPattern=kdevelop;
 Type=Application
 Exec=gideon -caption "%c" %i %m %u
 MimeType=application/x-kdevelop;
-Icon=kdevelop
+Icon=gideon
 DocPath=kdevelop/index.html
 Terminal=0
 Name=KDevelop 3.0
