--- a/lib/interfaces/Makefile.am
+++ b/lib/interfaces/Makefile.am
@@ -2,17 +2,7 @@ INCLUDES = $(all_includes)
 
 noinst_LTLIBRARIES = libkdevinterfaces.la
 
-libkdevinterfaces_la_SOURCES = kdevcore.cpp kdevproject.cpp kdevlanguagesupport.cpp \
-			       kdevmakefrontend.cpp kdevappfrontend.cpp \
-			       kdevcompileroptions.cpp kdevpartcontroller.cpp kdevapi.cpp \
-			       kdevdifffrontend.cpp KDevMakeFrontendIface.skel KDevMakeFrontendIface.cpp \
-			       KDevAppFrontendIface.skel KDevAppFrontendIface.cpp \
-			       KDevCoreIface.skel KDevCoreIface.cpp kdevmainwindow.cpp \
-			       KDevPartControllerIface.skel KDevPartControllerIface.cpp \
-			       kdevplugin.cpp kdevdebugger.cpp kdevversioncontrol.cpp \
-			       kdevversioncontrol.h kdevcreatefile.cpp \
-			       kde30x_markinterfaceextension.cpp \
-			       kde30x_texthintinterface.cpp
+libkdevinterfaces_la_SOURCES = kdevcore.cpp kdevproject.cpp kdevlanguagesupport.cpp 			       kdevmakefrontend.cpp kdevappfrontend.cpp 			       kdevcompileroptions.cpp kdevpartcontroller.cpp kdevapi.cpp 			       kdevdifffrontend.cpp KDevMakeFrontendIface.skel KDevMakeFrontendIface.cpp 			       KDevAppFrontendIface.skel KDevAppFrontendIface.cpp 			       KDevCoreIface.skel KDevCoreIface.cpp kdevmainwindow.cpp 			       KDevPartControllerIface.skel KDevPartControllerIface.cpp 			       kdevplugin.cpp kdevdebugger.cpp kdevversioncontrol.cpp 			       kdevversioncontrol.h kdevcreatefile.cpp 			       kde30x_markinterfaceextension.cpp 			       kde30x_texthintinterface.cpp kdevsourceformatter.cpp
 
 kdevelopincludedir = $(includedir)/kdevelop
 kdevelopinclude_HEADERS = \
@@ -25,7 +15,7 @@ kdevelopinclude_HEADERS = \
 	kdevcreatefile.h		 kdevpartcontroller.h \
 	kdevappfrontend.h		 kdevplugin.h \
 	kdevcompileroptions.h		 kdevproject.h \
-	kdevcore.h 
+	kdevcore.h 			 kdevsourceformatter.h
 
 noinst_HEADERS = kdevapi.h
 
@@ -34,7 +24,8 @@ servicetype_DATA = kdevelopcompileroptions.desktop \
 		   kdevelopmakefrontend.desktop kdevelopappfrontend.desktop \
 		   kdevelopproject.desktop kdeveloplanguagesupport.desktop \
 		   kdevelopplugin.desktop kdevelopdifffrontend.desktop \
-		   kdevelopcreatefile.desktop kdevelopversioncontrol.desktop
+		   kdevelopcreatefile.desktop kdevelopversioncontrol.desktop \
+		   kdevelopsourceformatter.desktop
 
 
 METASOURCES = AUTO
