--- a/parts/astyle/Makefile.am
+++ b/parts/astyle/Makefile.am
@@ -1,11 +1,11 @@
-INCLUDES = -I$(top_srcdir)/lib/interfaces $(all_includes)
+INCLUDES = -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/astyle $(all_includes)
 
 kde_module_LTLIBRARIES = libkdevastyle.la
 libkdevastyle_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
-libkdevastyle_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
+libkdevastyle_la_LIBADD = $(top_builddir)/lib/libkdevelop.la $(top_builddir)/lib/astyle/libastyle.la
 
-libkdevastyle_la_SOURCES = astyle_part.cpp ASBeautifier.cpp ASFormatter.cpp ASResource.cpp astyleconfig.ui astyle_widget.cpp astyle_adaptor.cpp \
-	astyle.h  astyle_adaptor.h  astyle_part.h  astyle_widget.h  compiler_defines.h
+libkdevastyle_la_SOURCES = astyle_part.cpp astyleconfig.ui astyle_widget.cpp \
+	astyle_part.h  astyle_widget.h astyle_adaptor.h astyle_adaptor.cpp
 METASOURCES = AUTO
 
 servicedir = $(kde_servicesdir)
