--- a/lib/qextmdi/src/Makefile.am
+++ b/lib/qextmdi/src/Makefile.am
@@ -6,7 +6,7 @@ lib_LTLIBRARIES = libkdevelopqextmdi.la
 libkdevelopqextmdi_la_LDFLAGS = $(all_libraries) -version-info 3:0
 libkdevelopqextmdi_la_LIBADD  = $(LIB_KPARTS)
 
-libkdevelopqextmdi_la_SOURCES = qextmdichildarea.cpp qextmdichildfrm.cpp qextmdichildfrmcaption.cpp qextmdichildview.cpp qextmdimainfrm.cpp qextmditaskbar.cpp
+libkdevelopqextmdi_la_SOURCES = kmdichildarea.cpp kmdichildfrm.cpp kmdichildfrmcaption.cpp kmdichildview.cpp kmdimainfrm.cpp kmditaskbar.cpp
 
 KDE_OPTIONS = nofinal
 METASOURCES = AUTO
