Added persistance to bookmarks - they are now saved to the .kdevses file

--- a/parts/bookmarks/kdevpart_bookmarks.desktop
+++ b/parts/bookmarks/kdevpart_bookmarks.desktop
@@ -7,5 +7,5 @@ Name=KDevBookmarks
 GenericName=Persistant Source Bookmarks
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
-X-KDevelop-Scope=Global
+X-KDevelop-Scope=Project
 X-KDE-Library=libkdevbookmarks
