For some reason I had the screensaver tmplate in here... whatever fixed now, maby we can get rid of the broken attempt in kdedcop.
At anyrate this is the original template from kdenonbeta that is used as
the base for DCOPRSS and KWeatherService.

CCMAIL: Julian Rockey <linux@jrockey.com>

--- a/parts/appwizard/dcopservice/Makefile.am
+++ b/parts/appwizard/dcopservice/Makefile.am
@@ -4,7 +4,7 @@ dcopservicedir = ${appwizarddatadir}/template-dcopservice
 templatedir = ${appwizarddatadir}/templates
 
 dcopservice_DATA = dcopservice.desktop   dcopservice.png \
-	dcopservice.h  src-Makefile.am\
+	dcopservice.h  src-Makefile.am main.cpp\
 	dcopservice.cpp  dcopservice.kdevelop subdirs
 
 template_DATA = dcopservice
