--- a/gideon.desktop
+++ b/gideon.desktop
@@ -2,7 +2,7 @@
 Encoding=UTF-8
 BinaryPattern=kdevelop;
 Type=Application
-Exec=gideon --project %u
+Exec=gideon %u
 MimeType=application/x-kdevelop;
 Icon=gideon
 DocPath=kdevelop/index.html
