added new version of fileselector.. this version is a port on Kate FileSelector

--- a/parts/fileselector/Makefile.am
+++ b/parts/fileselector/Makefile.am
@@ -6,10 +6,7 @@ kde_module_LTLIBRARIES = libkdevfileselector.la
 libkdevfileselector_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevfileselector_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
-libkdevfileselector_la_SOURCES = fileselector_part.cpp \
-                                  fileselectorwidget.cpp \
-								  kfiledndiconview.cpp \
-								  kfilednddetailview.cpp
+libkdevfileselector_la_SOURCES = fileselector_part.cpp fileselector_widget.cpp kactionselector.cpp kactionselector.h
 
 METASOURCES = AUTO
 
