- added KDevCodeRepository to kdevelop lib - added field "ID" to Tag - removed some annoying warnings - hotfix: declarations in external linkagespec are parsed two times?! - implemented a *dummy* version management for pcs files

--- a/parts/outputviews/kdevappoutputview.desktop
+++ b/parts/outputviews/kdevappoutputview.desktop
@@ -4,6 +4,6 @@ Type=Service
 Exec=blubb
 Comment=Application Output View
 Name=KDevAppOutputView
-Icon=
+Icon=exec
 ServiceTypes=KDevelop/AppFrontend
 X-KDE-Library=libkdevoutputviews
