--- a/parts/javasupport/kdevjavasupport.rc
+++ b/parts/javasupport/kdevjavasupport.rc
@@ -1,27 +1,4 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<kpartgui name="KDevCppSupport" version="3">
-<MenuBar>
- <Menu name="edit">
-  <Action name="edit_complete_text"/>
- </Menu>
-
- <Menu name="edit">
-  <Action name="edit_make_member"/>
- </Menu>
- 
- <Menu name="view">
-  <Action name="edit_switchheader"/>
- </Menu>
-
- <Menu name="project">
-  <Action name="project_newclass"/>
- </Menu>
-</MenuBar>
-
-<ToolBar name="browserToolBar" position="Top" iconText="IconOnly" >
-  <text>Browser Toolbar</text>
-  <Action name="project_newclass"/>
-  <Separator />
-</ToolBar>
+<kpartgui name="KDevJavaSupport" version="4">
 </kpartgui>
 
