"Install with kdesu" command in "Build" menu can be useful. Patch by: Marcin Dec < ced -at- ciapek.uci.agh.edu.pl > aka  "analena" on #kdevelop channel on irc.kde.org

--- a/parts/autoproject/kdevautoproject.rc
+++ b/parts/autoproject/kdevautoproject.rc
@@ -12,6 +12,7 @@
     <Action name="build_configure" />
     <Action name="build_makefilecvs" />
     <Action name="build_install" />
+    <Action name="build_install_kdesu" />
     <Separator/>
     <Action name="build_clean" />
     <Action name="build_distclean" />
