Ruby documentation TOC and index. Patch by: Marek Janukowicz < child -at- t17.ds.pwr.wroc.pl >

--- a/doc/std/Makefile.am
+++ b/doc/std/Makefile.am
@@ -1,7 +1,7 @@
 tocdir = ${kde_datadir}/kdevdoctreeview/tocs
-toc_DATA = libc.toc stl.toc kde2book.toc libstdc++.toc
+toc_DATA = libc.toc stl.toc kde2book.toc libstdc++.toc ruby.toc
 
 indexdir = ${kde_datadir}/devdoctreeview/indices
-index_DATA = libc.index stl.index kde2book.index libstdc++.index
+index_DATA = libc.index stl.index kde2book.index libstdc++.index ruby.index
 
 
