--- a/lib/cppparser/Makefile.am
+++ b/lib/cppparser/Makefile.am
@@ -1,4 +1,8 @@
 INCLUDES = $(all_includes)
 lib_LTLIBRARIES =  libkdevcppparser.la
 libkdevcppparser_la_LDFLAGS = $(all_libraries)
-libkdevcppparser_la_SOURCES =  ast.cpp ast.h driver.cpp driver.h errors.cpp errors.h lexer.cpp lexer.h lookup.cpp lookup.h parser.cpp parser.h tree_parser.cpp tree_parser.h keywords.lut.h keywords.table
+libkdevcppparser_la_SOURCES =  ast.cpp driver.cpp errors.cpp lexer.cpp lookup.cpp parser.cpp tree_parser.cpp
+
+kdevcppparserincludedir = $(includedir)/kdevelop/cppparser
+kdevcppparserinclude_HEADERS = ast.h  driver.h lexer.h parser.h tree_parser.h
+
