--- a/lib/catalog/Makefile.am
+++ b/lib/catalog/Makefile.am
@@ -1,4 +1,7 @@
 INCLUDES = $(all_includes)
 lib_LTLIBRARIES =  libkdevcatalog.la
-libkdevcatalog_la_SOURCES =  catalog.cpp catalog.h tag.cpp tag.h
+libkdevcatalog_la_SOURCES = catalog.cpp tag.cpp
 libkdevcatalog_la_LIBADD = -ldb
+
+kdevcatalogincludedir = $(includedir)/kdevelop/catalog
+kdevcataloginclude_HEADERS = catalog.h tag.h
