now the catalog is implemented as template, this will be useful to implement other kind of catalogs (for instance file-catalog, ...)

--- a/lib/catalog/Makefile.am
+++ b/lib/catalog/Makefile.am
@@ -1,7 +1,7 @@
 INCLUDES = $(all_includes)
 lib_LTLIBRARIES =  libkdevcatalog.la
-libkdevcatalog_la_SOURCES = catalog.cpp tag.cpp
+libkdevcatalog_la_SOURCES = tag.cpp
 libkdevcatalog_la_LIBADD = -ldb
 
 kdevcatalogincludedir = $(includedir)/kdevelop/catalog
-kdevcataloginclude_HEADERS = catalog.h tag.h
+kdevcataloginclude_HEADERS = gcatalog.h gcatalog.tcc catalog.h tag.h
