kmdi compiling update

--- a/kdevelop.m4.in
+++ b/kdevelop.m4.in
@@ -467,6 +467,52 @@ AC_DEFUN(KDEV_CHECK_BDB,
 ])
 
 dnl  **********
+dnl  check whether we need the qextmdi lib
+dnl  **********
+
+AC_DEFUN(KDEV_CHECK_MDI,
+[
+  AC_MSG_CHECKING(whether to use kmdi lib from kdelibs)
+  AC_CACHE_VAL(ac_cv_mdi_setup,
+  [ 
+    AC_LANG_SAVE
+    AC_LANG_CPLUSPLUS
+    save_CXXFLAGS="$CXXFLAGS"
+    CXXFLAGS="$KDE_INCLUDES"
+
+    AC_TRY_LINK([
+      #include <kdeversion.h>
+    ],
+    [
+      #if KDE_VERSION < ((3<<16) | (1<<8) | (90))
+         KDE_choke me
+      #endif
+    ],
+      ac_cv_mdi_setup=yes,
+      ac_cv_mdi_setup=no
+    )
+    CXXFLAGS="$save_CXXFLAGS"
+    AC_LANG_RESTORE
+   ])
+
+  if test "$ac_cv_mdi_setup" = "yes"; then
+    LIB_KDEVMDI="-lkmdi"
+    QEXTMDI_SUBDIR=""
+    KDEVMDI_INCLUDES=""
+    AC_MSG_RESULT(yes)
+  else		   
+    LIB_KDEVMDI='$(top_builddir)/lib/qextmdi/src/libkdevelopqextmdi.la'
+    QEXTMDI_SUBDIR="qextmdi"
+    KDEVMDI_INCLUDES='-I$(top_srcdir)/lib/qextmdi/include'
+    AC_MSG_RESULT(no)
+  fi
+ 
+  AC_SUBST(LIB_KDEVMDI)
+  AC_SUBST(QEXTMDI_SUBDIR)
+  AC_SUBST(KDEVMDI_INCLUDES)
+])
+
+dnl  **********
 dnl  check whether we need the compat lib
 dnl  **********
 
